# nginxm

./: Dockerfile  README.md  requirements.txt  setup.cfg
nginxm/: __main__.py  acme.py  conf.py  utils.py
nginxm/conf/: nginx.conf  nginx.path  nginx.webdav  systemd.template
ngm2/: __init__.py  __main__.py  acme.py  conf.py  nginx.py  utils.py
ngm2/conf/: nginx.default  nginx.domain  nginx.domain.insecure  nginx.html  nginx.path  nginx.proxy  nginx.server  nginx.webdav
tests/: protected.conf
tests/protected/: index.html
tests/still-protected/: index.html
