[metadata]
name = nginxm
version = 0.1

[options]
packages = nginxm
install_requires =
    acme-tiny
    jinja2
    htpasswd
include_package_data = True

[options.data_files]
data =
    nginxm/conf/nginx.conf
    nginxm/conf/nginx.path
    nginxm/conf/nginx.webdav
    nginxm/conf/systemd.template
    nginxm/conf/systemd.timer

[options.entry_points]
console_scripts =
    ngm = nginxm.__main__:main
    nginxm = nginxm.__main__:main