[metadata]
name = ngm2
version = 0.1

[options]
packages = ngm2
install_requires =
    acme-tiny
    jinja2
    htpasswd
include_package_data = True

[options.data_files]
data =
    ngm2/conf/nginx.conf
    ngm2/conf/nginx.path
    ngm2/conf/nginx.webdav
    ngm2/conf/systemd.template
    ngm2/conf/systemd.timer

[options.entry_points]
console_scripts =
    ngm2 = ngm2.__main__:main